Crash under e_dom_resize_document_content_to_preview_width()

Related to bug #739955, where is also a little explanation [1] what led
to this change.

[1] https://bugzilla.gnome.org/show_bug.cgi?id=739955#c22